--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/cs_CZ/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/cs_CZ/openmediavault-usbbackup.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-10-05 14:19+0000\n"
+"PO-Revision-Date: 2016-10-06 13:20+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -24,10 +24,10 @@ msgstr "Přidat zálohovací úlohu"
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr "Výstup z příkazu (pokud nějaký vznikl) je e-mailem odeslán správci systému."
+msgstr "Výstup z příkazu (pokud nějaký vznikne) bude e-mailem odeslán správci systému."
 
 msgid "Archive"
-msgstr "Archiv"
+msgstr "Archivní režim"
 
 msgid "Backup jobs"
 msgstr "Zálohovací úlohy"
@@ -57,7 +57,7 @@ msgid "Enable"
 msgstr "Zapnout"
 
 msgid "Enable archive mode."
-msgstr "Zapnout archivní režim."
+msgstr "Zajistit zachování vlastnictví, oprávnění a atributů, dále symbolických odkazů, atd."
 
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
@@ -83,7 +83,7 @@ msgid "From shared folder to external storage"
 msgstr "Ze sdílené složky na vnější úložiště"
 
 msgid "Keep partially transferred files"
-msgstr "Zachovat i jen částečně přenesené soubory"
+msgstr "Zachovat nedopřenesené soubory"
 
 msgid "Mode"
 msgstr "Režim"
@@ -97,10 +97,10 @@ msgid ""
 "Please note that the web interface is blocked until the manually started "
 "backup job has been finished. However the backup job is automatically "
 "executed in the background when the storage device is connected to the host."
-msgstr "Nezapomeňte, že do doby než bude dokončeno, ručně spuštěné zálohování znepřístupní webové rozhraní. Oproti tomu automaticky spuštěné zálohování (připojením vnějšího úložného zařízení) bude spuštěné na pozadí a webové rozhraní tak blokovat nebude."
+msgstr "Nezapomeňte, že do doby než bude dokončeno, ručně spuštěné zálohování znepřístupní webové rozhraní. Oproti tomu automaticky spouštěné zálohování (připojením vnějšího úložného zařízení) bude spuštěno na pozadí a webové rozhraní tak blokovat nebude."
 
 msgid "Preserve ACLs"
-msgstr "Zachovat ACL práva"
+msgstr "Zachovat ACL seznamy"
 
 msgid "Preserve extended attributes"
 msgstr "Zachovat rozšířené atributy"
@@ -137,7 +137,7 @@ msgstr "Zaslat e-mail"
 
 msgid ""
 "Set the destination permissions to be the same as the source permissions."
-msgstr "Nastavit oprávnění v cíli na shodná se zdrojem."
+msgstr "Nastavit oprávnění v cíli tak, aby byla stejná jako na zdroji."
 
 msgid "Shared folder"
 msgstr "Sdílená složka"
@@ -146,7 +146,7 @@ msgid "Suppress non-error messages."
 msgstr "Hlásit pouze chyby, ostatní potlačit."
 
 msgid "Synchronise from/to directory on external storage device."
-msgstr "Synchronizovat z/do složky na vnějším úložném zařízení."
+msgstr "Synchronizovat z/do vyhrazené složky na vnějším úložném zařízení."
 
 msgid "The external storage device."
 msgstr "Vnější úložné zařízení."
@@ -155,18 +155,18 @@ msgid ""
 "The shared folder content is synchronised from/to the root of the external "
 "storage device if this option is not set. The name of the directory is taken"
 " from the shared folder."
-msgstr "Obsah sdílené složky je synchronizován z/do kořenové složky vnějšího úložného zařízení, pokud tato volba není nastavena. Název složky je převzatý od sdílené složky."
+msgstr "Pokud je vypnuto, obsah sdílené složky bude synchronizován přímo z/do kořenové složky vnějšího úložného zařízení. Pokud zapnuto, název složky bude převzatý od sdílené složky."
 
 msgid ""
 "The shared folder to synchronise when the external storage device is "
 "connected."
-msgstr "Sdílená složka, jejíž obsah má být synchronizován s vnějším úložným zařízením, když je připojeno."
+msgstr "Sdílená složka, jejíž obsah synchronizovat s vnějším úložným zařízením, jakmile je připojeno."
 
 msgid "Times"
 msgstr "Časy"
 
 msgid "USB Backup"
-msgstr "Záloha na USB úložiště"
+msgstr "Záloha na/z USB úložiště"
 
 msgid "Update the destination ACLs to be the same as the source ACLs."
 msgstr "Aktualizovat ACL seznamy v cíli tak, aby byly stejné jako na zdroji."
