--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-usbbackup (3.2.12) stable; urgency=low
 
+  * Update locales.
   * Fix various issues.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 07 Oct 2016 08:32:17 +0200
