Mantis 0001619: interface localization.

--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-03 20:38+0200\n"
-"PO-Revision-Date: 2016-10-07 11:04+0000\n"
-"Last-Translator: zubr139\n"
+"POT-Creation-Date: 2016-10-09 21:33+0200\n"
+"PO-Revision-Date: 2016-10-09 19:34+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -498,7 +498,7 @@ msgid "Bolivia"
 msgstr "Болівія"
 
 msgid "Bond"
-msgstr "Bond"
+msgstr "Зв'язок"
 
 msgid "Boot"
 msgstr "Завантаження"
@@ -734,7 +734,7 @@ msgid "Creating the file system, please wait ..."
 msgstr "Створення файлової системи, будь ласка, зачекайте ..."
 
 msgid "Critical"
-msgstr "Критично"
+msgstr "Критична"
 
 msgid "Croatia"
 msgstr "Хорватія"
@@ -1117,7 +1117,7 @@ msgid "Enable extended attribute support"
 msgstr "Увімкнути підтримку розширених атрибутів"
 
 msgid "Enable keyboard-interactive authentication"
-msgstr "Увімкнути клавіатурну інтерактивну аутентифікація"
+msgstr "Увімкнути клавіатурну інтерактивну аутентифікацію"
 
 msgid "Enable module listing"
 msgstr "Увімкнути перегляд модулів"
@@ -1256,7 +1256,7 @@ msgstr "FXP"
 msgid ""
 "FXP allows transfers between two remote servers without any file data going "
 "to the client asking for the transfer."
-msgstr "FXP дозволяє передавати дані між двома серверами без запити передачі до клієнта."
+msgstr "FXP дозволяє передавати дані між двома серверами без запиту передачі до клієнта."
 
 msgid "Falkland Islands"
 msgstr "Фолклендські острови"
@@ -1524,13 +1524,13 @@ msgid "Identify network interface device"
 msgstr "Ідентифікувати мережевий пристрій"
 
 msgid "Idle"
-msgstr "Бездіяльність"
+msgstr "Неактивний"
 
 msgid ""
 "If 'Guests allowed' is selected and no login credential is provided, then "
 "access as guest. Always access as guest when 'Only guests' is selecting; in "
 "this case no password is required to connect to the share."
-msgstr ""
+msgstr "Якщо вибрати 'Гості дозволені' і не передбачено облікових користувачів, то доступ як гість. Завжди доступ в якості гостя, коли вибрано «тільки гості»; в цьому випадку пароль не потрібно для підключення до ресурсу."
 
 msgid ""
 "If set then the client will be challenged to supply a username and password "
@@ -1542,7 +1542,7 @@ msgid ""
 "before starting the file transfer with the client. Then it is not possible "
 "to map users and groups by name and the daemon is not being able to follow "
 "symbolic links that are either absolute or outside of the new root path."
-msgstr ""
+msgstr "Якщо цей параметр встановлений, демон буде змінювати кореневу файлову систему на спільний шлях до теки, перш ніж почати передачу файлу з клієнтом. Тоді це не представляється можливим для зіставлення користувачів і груп по імені і демон не в змозі слідувати символічним посилання, які є абсолютним або за межами нового кореневого шляху."
 
 msgid "If this option is set, then any attempted downloads will fail."
 msgstr "Якщо ця опція встановлена, то будь-які спроби завантаження будуть невдалі."
@@ -2088,6 +2088,9 @@ msgstr "Маска мережі"
 msgid "Network"
 msgstr "Мережа"
 
+msgid "Network Interfaces"
+msgstr ""
+
 msgid "Network interfaces"
 msgstr "Мережеві інтерфейси"
 
@@ -2475,7 +2478,7 @@ msgid ""
 "want.</li><li>Idle - Check the device unless it is in SLEEP, STANDBY or IDLE"
 " mode. In the IDLE state, most disks are still spinning, so this is probably"
 " not what you want.</li></ul>"
-msgstr ""
+msgstr "Запобігає розкручуванню диска при періодичних запитах. <br/><ul><li> Ніколи - Опитувати (перевіряти) пристрій незалежно від режиму живлення. Це може привести до того, що зупинений диск буде знову розкручений, коли буде перевірений.</li><li>Сон - Перевіряти пристрій, якщо він не знаходиться в режимі СОН.</li><li>Очікування - Перевіряти пристрій, якщо він не знаходиться в режимі СОН або ОЧІКУВАННЯ. У цих режимах більшість дисків не розкручуються, так що якщо Ви хочете запобігти розкручування диска при кожному запиті, швидше за все це той режим, який Вам потрібен.</li><li>Неактивний - Перевіряти пристрій, якщо він не знаходиться в режимі СОН, ОЧІКУВАННЯ або НЕАКТИВНИЙ. У режимі НЕАКТИВНИЙ більшість дисків продовжують розкручуватися, так що швидше за все це не той режим, який Вам потрібен.</li></ul>"
 
 msgid "Primary"
 msgstr "Первинний"
@@ -2654,12 +2657,12 @@ msgstr "Рапорт"
 msgid ""
 "Report if the temperature had changed by at least N degrees Celsius since "
 "last report. Set to 0 to disable this report."
-msgstr "Повідомити, якщо температура змінилася, принаймні N градусів за Цельсієм з часу останньої доповіді. Встановіть в 0 щоб вимкнути цей звіт."
+msgstr "Повідомити, якщо температура змінилася, принаймні на N градусів за Цельсієм з часу останньої доповіді. Встановіть 0 щоб вимкнути цей звіт."
 
 msgid ""
 "Report if the temperature is greater or equal than N degrees Celsius. Set to"
 " 0 to disable this report."
-msgstr "Повідомити, якщо температура вища або рівна N градусів за Цельсієм. Встановіть в 0 щоб вимкнути цей звіт."
+msgstr "Повідомити, якщо температура вища або рівна N градусів за Цельсієм. Встановіть 0 щоб вимкнути цей звіт."
 
 msgid "Repository"
 msgstr "Репозиторій"
@@ -3174,7 +3177,7 @@ msgid "Sri Lanka"
 msgstr "Шрі Ланка"
 
 msgid "Standby"
-msgstr "Зупинити"
+msgstr "Очікування"
 
 msgid "Start"
 msgstr "Старт"
@@ -3379,7 +3382,7 @@ msgid ""
 " mask and directory mask but the inherit permissions parameter overrides "
 "this. This can be particularly useful on systems with many users to allow a "
 "single share to be used flexibly by each user."
-msgstr ""
+msgstr "Дозволи на нові файли і каталоги зазвичай регулюються маскою, але параметр успадкування має більш високий пріоритет. Це дозволяє гнучко організувати спільне використання багатьма користувачами одного загального ресурсу."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Секретний ключ RSA в форматі X.509 PEM."
@@ -3542,7 +3545,7 @@ msgid ""
 "This may make more efficient use of the system CPU's and cause Samba to be "
 "faster. Samba automatically turns this off for clients that use protocol "
 "levels lower than NT LM 0.12 and when it detects a client is Windows 9x."
-msgstr ""
+msgstr "Збільшує ефективність використання ЦП і прискорює роботу Samba. Samba автоматично відключає цю опцію для клієнтів, що використовують рівні протоколу нижче, ніж NT LM 0.12, і, коли виявляє клієнт Windows 9x."
 
 msgid ""
 "This option causes the server to not send a certificate request during a SSL"
@@ -3561,7 +3564,7 @@ msgid ""
 "use the keyword ALL (or the netmask 0.0.0.0/0) and then explicitly specify "
 "to the hosts allow parameter those hosts that should be permitted access. "
 "Leave this field empty to use default settings."
-msgstr ""
+msgstr "Розділений комою, пробілом, або символом табуляції список хостів, яким НЕ дозволений доступ до цього модулю. При конфлікті список дозволів має більш високий пріоритет. При необхідності типово заборонити все, використовуйте ключове слово ALL (або мережеву маску 0.0.0.0/0) і потім явно визначте хости, яким потрібно дозволити доступ. Залиште цю область порожньою, щоб використовувати стандартні параметри."
 
 msgid ""
 "This option is a comma, space, or tab delimited set of host which are NOT "
@@ -3570,13 +3573,13 @@ msgid ""
 "use the keyword ALL (or the netmask 0.0.0.0/0) and then explicitly specify "
 "to the hosts allow parameter those hosts that should be permitted access. "
 "Leave this field empty to use default settings."
-msgstr ""
+msgstr "Розділений комою, пробілом, або символом табуляції список хостів, яким НЕ дозволений доступ до цього спільного ресурсу. При конфлікті список дозволів має більш високий пріоритет. При необхідності типово заборонити все, використовуйте ключове слово ALL (або мережеву маску 0.0.0.0/0) і потім явно визначте хости, яким потрібно дозволити доступ. Залиште цю область порожньою, щоб використовувати стандартні параметри."
 
 msgid ""
 "This option is a comma, space, or tab delimited set of hosts which are "
 "permitted to access this module. You can specify the hosts by name or IP "
 "number. Leave this field empty to use default settings."
-msgstr ""
+msgstr "Розділений комою, пробілом, або символом табуляції список хостів, яким дозволений доступ до даного модулю. Ви можете визначити хости по назві або по IP адресі. Залиште це поле порожнім, щоб використовувати стандартні параметри."
 
 msgid ""
 "This option is a comma, space, or tab delimited set of hosts which are "
