--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-03 20:38+0200\n"
-"PO-Revision-Date: 2016-10-03 18:38+0000\n"
+"POT-Creation-Date: 2016-10-09 21:33+0200\n"
+"PO-Revision-Date: 2016-10-09 19:35+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2094,6 +2094,9 @@ msgstr "Netzmaske"
 
 msgid "Network"
 msgstr "Netzwerk"
+
+msgid "Network Interfaces"
+msgstr "Netzwerkschnittstellen"
 
 msgid "Network interfaces"
 msgstr "Netzwerkschnittstellen"
