--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-10-09 21:33+0200\n"
-"PO-Revision-Date: 2016-10-09 19:34+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-11 10:30+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -247,7 +247,7 @@ msgid ""
 "Additional device settings, e.g. 'autoneg off speed 100 duplex full'. See <a"
 " href='http://linux.die.net/man/8/ethtool' target='_blank'>manual pages</a> "
 "for more details."
-msgstr "Další nastavení zařízení, např. „autoneg off speed 100 duplex full“. Podrobnosti naleznete v <a href='http://linux.die.net/man/8/ethtool' target='_blank'>manuálových stránkách</a>."
+msgstr "Další nastavení zařízení, např. „autoneg off speed 100 duplex full“. Podrobnosti naleznete v <a href='http://linux.die.net/man/8/ethtool' target='_blank'>manuálových stránkách</a> (v angličtině)."
 
 msgid "Address"
 msgstr "Adresa"
@@ -2088,7 +2088,7 @@ msgid "Network"
 msgstr "Síť"
 
 msgid "Network Interfaces"
-msgstr ""
+msgstr "Síťová rozhraní"
 
 msgid "Network interfaces"
 msgstr "Síťová rozhraní"
@@ -2357,45 +2357,45 @@ msgstr "Pitcairnovy ostrovy"
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/exports' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti naleznete v <a href='http://linux.die.net/man/5/exports' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://linux.die.net/man/5/exports' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
 "Please check the <a href='http://www.openbsd.org/cgi-"
 "bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manual page</a> for"
 " more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.openbsd.org/cgi-bin/man.cgi?query=sshd_config&sektion=5' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.proftpd.org/docs/contrib/mod_tls.html' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
 "Please check the <a "
 "href='http://www.proftpd.org/docs/directives/configuration_full.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.proftpd.org/docs/directives/configuration_full.html' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.proftpd.org/docs/directives/configuration_full.html' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
 "Please check the <a href='http://www.proftpd.org/docs/directives/linked/by-"
 "name.html' target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.proftpd.org/docs/directives/linked/by-name.html' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.proftpd.org/docs/directives/linked/by-name.html' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsyncd.conf.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/ftp/rsync/rsyncd.conf.html' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/ftp/rsync/rsyncd.conf.html' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid ""
 "Please check the <a "
 "href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>manuálové stránce</a>."
+msgstr "Podrobnosti naleznete v <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>manuálové stránce</a> (v angličtině)."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Zvolte způsob kompletního smazání zařízení nebo celou akci zrušte kliknutím na „Zrušit“."
