--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-10-09 21:33+0200\n"
-"PO-Revision-Date: 2016-10-09 19:34+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-09 20:18+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1542,7 +1542,7 @@ msgid ""
 "before starting the file transfer with the client. Then it is not possible "
 "to map users and groups by name and the daemon is not being able to follow "
 "symbolic links that are either absolute or outside of the new root path."
-msgstr "Якщо цей параметр встановлений, демон буде змінювати кореневу файлову систему на спільний шлях до теки, перш ніж почати передачу файлу з клієнтом. Тоді це не представляється можливим для зіставлення користувачів і груп по імені і демон не в змозі слідувати символічним посилання, які є абсолютним або за межами нового кореневого шляху."
+msgstr "Якщо цей параметр встановлений, демон буде змінювати кореневу файлову систему на спільний шлях до теки, перш ніж почне передачу файлу з клієнтом. Тоді це не представляється можливим для зіставлення користувачів і груп по імені і демон не в змозі слідувати символічним посилання, які є абсолютним або за межами нового кореневого шляху."
 
 msgid "If this option is set, then any attempted downloads will fail."
 msgstr "Якщо ця опція встановлена, то будь-які спроби завантаження будуть невдалі."
@@ -2089,7 +2089,7 @@ msgid "Network"
 msgstr "Мережа"
 
 msgid "Network Interfaces"
-msgstr ""
+msgstr "Мережеві інтерфейси"
 
 msgid "Network interfaces"
 msgstr "Мережеві інтерфейси"
