--- a/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-10-09 21:33+0200\n"
-"PO-Revision-Date: 2016-10-09 19:34+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-09 20:13+0000\n"
+"Last-Translator: Milan Toet <milantoet@gmail.com>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/votdev/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,7 +29,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s beschikbaar)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) gebruikt, %s beschikbaar]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [op %s, %s]"
@@ -711,7 +711,7 @@ msgid "Cook Islands"
 msgstr "Kook eilanden"
 
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Kopieer naar het klembord"
 
 msgid "Costa Rica"
 msgstr "Costa Rica"
@@ -949,7 +949,7 @@ msgstr "Weet u zeker dat u de inhoud van de gedeelde map wilt verwijderen? De ma
 msgid ""
 "Do you really want to reset the UI settings to their default values, e.g. "
 "the order of the grid columns?"
-msgstr ""
+msgstr "Weet u zeker dat u de UI instellingen naar de standaard waarden wilt herstellen, b.v. de volgorde van raster kolommen"
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2090,7 +2090,7 @@ msgid "Network"
 msgstr "Netwerk"
 
 msgid "Network Interfaces"
-msgstr ""
+msgstr "Netwerk Interfaces"
 
 msgid "Network interfaces"
 msgstr "Netwerkkaarten"
@@ -2261,7 +2261,7 @@ msgid "Package information"
 msgstr "Pakketinformatie"
 
 msgid "Page not found"
-msgstr ""
+msgstr "Pagina niet gevonden"
 
 msgid "Pakistan"
 msgstr "Pakistan"
@@ -2285,7 +2285,7 @@ msgid "Paraguay"
 msgstr "Paraguay"
 
 msgid "Parent Device"
-msgstr ""
+msgstr "Moeder apparaat"
 
 msgid "Parent interface"
 msgstr "Hoofdnetwerkkaart"
@@ -2403,7 +2403,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Kies een methode om het apparaat te wissen of 'Annuleren' om af te breken"
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "Selecteer eerst een apparaat."
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
@@ -2678,12 +2678,12 @@ msgid "Reset"
 msgstr "Reset"
 
 msgid "Reset UI to defaults"
-msgstr ""
+msgstr "Herstel de UI naar de standaard waarden"
 
 msgid ""
 "Reset the UI settings to their default values, e.g. the order of the grid "
 "columns."
-msgstr ""
+msgstr "Herstel de UI instellingen naar de standaard waarden, b.v. de volgorde van de raster kolommen."
 
 msgid "Resize"
 msgstr "Grootte aanpassen"
@@ -3951,7 +3951,7 @@ msgid "Web Administrator Password"
 msgstr "Paswoord van de webbeheerder"
 
 msgid "Web control panel"
-msgstr ""
+msgstr "Web controle paneel"
 
 msgid "Wednesday"
 msgstr "Woensdag"
@@ -4013,7 +4013,7 @@ msgid "Zimbabwe"
 msgstr "Zimbabwe"
 
 msgid "control panel"
-msgstr ""
+msgstr "controle paneel"
 
 msgid "day"
 msgstr "dag"
