--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.45) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Oct 2016 22:51:20 +0200
+
 openmediavault (3.0.44) stable; urgency=low
 
   * Update locales.
