--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,9 @@
 openmediavault (3.0.45) stable; urgency=low
 
-  * 
+  * Various improvements and bugfixes.
+  * Added a daily cron script which will email the administrator when there
+    are locked/banned users.
+  * Add module to omv-firstaid to reset the failed login attempt counter.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Oct 2016 22:51:20 +0200
 
