--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.46) stable; urgency=low
+
+  * Mantis 0001621: Fix erroneous smb.conf file.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Oct 2016 20:51:55 +0200
+
 openmediavault (3.0.45) stable; urgency=low
 
   * Update locales.
