--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,9 @@ openmediavault (3.0.47) stable; urgency=low
 
   * Various improvements and bugfixes.
   * Change notification email subject to '[HOSTNAME]: SUBJECT'.
+  * Set 'obey pam restrictions = no' by default in smb.conf to force Samba
+    to use the directory mode/mask settings and not the PAM's account and
+	session management directives.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Oct 2016 21:20:05 +0200
 
