--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,7 @@ openmediavault (3.0.47) stable; urgency=low
   * Set 'obey pam restrictions = no' by default in smb.conf to force Samba
     to use the directory mode/mask settings and not the PAM's account and
 	session management directives.
+  * Mantis 0001626: NFS-Exports of fuse-filesystem require fsid=<id>.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Oct 2016 21:20:05 +0200
 
