--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -6,6 +6,7 @@ openmediavault (3.0.47) stable; urgency=low
     to use the directory mode/mask settings and not the PAM's account and
 	session management directives.
   * Mantis 0001626: NFS-Exports of fuse-filesystem require fsid=<id>.
+  * Mantis 0001627: omv_config_get returns wrong output.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Oct 2016 21:20:05 +0200
 
