--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.2.11) stable; urgency=low
 
   * Mantis 0001626: NFS-Exports of fuse-filesystem require fsid=<id>.
+  * Mantis 0001627: omv_config_get returns wrong output.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Oct 2016 22:26:27 +0200
 
