--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-10-09 21:33+0200\n"
-"PO-Revision-Date: 2016-10-09 20:18+0000\n"
+"PO-Revision-Date: 2016-10-16 17:23+0000\n"
 "Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -248,7 +248,7 @@ msgid ""
 "Additional device settings, e.g. 'autoneg off speed 100 duplex full'. See <a"
 " href='http://linux.die.net/man/8/ethtool' target='_blank'>manual pages</a> "
 "for more details."
-msgstr "Додаткові настройки пристрою, наприклад 'autoneg off speed 100 duplex full'. Дивитись<a href='http://linux.die.net/man/8/ethtool' target='_blank'>manual pages</a>"
+msgstr "Додаткові налаштування пристрою, наприклад 'autoneg off speed 100 duplex full'. Дивитись<a href='http://linux.die.net/man/8/ethtool' target='_blank'>сторінку керівництва</a>"
 
 msgid "Address"
 msgstr "Адреса"
@@ -314,7 +314,7 @@ msgid ""
 msgstr "Дозволити цьому серверу видавати себе в якості сервера часу для Windows клієнтів"
 
 msgid "Allow this server to try and become a local master browser"
-msgstr "Дозволити цьому сервери стати локальним майстрос списків"
+msgstr "Дозволити цьому серверу стати локальним майстром списків"
 
 msgid "American Samoa"
 msgstr "Американське Самоа"
@@ -441,7 +441,7 @@ msgid "Automatic Acoustic Management"
 msgstr "Автоматичний акустичний контроль"
 
 msgid "Available"
-msgstr "Доступний"
+msgstr "Доступно"
 
 msgid "Azerbaijan"
 msgstr "Азербайджан"
@@ -895,7 +895,7 @@ msgid "Disk usage"
 msgstr "Використання диску"
 
 msgid "Displaying items {0} - {1} of {2}"
-msgstr "Показати значення {0} - {1} of {2}"
+msgstr "Показано значень {0} - {1} із {2}"
 
 msgid "Djibouti"
 msgstr "Джібуті"
@@ -3350,7 +3350,7 @@ msgstr "Розташування файлів для загального дос
 msgid ""
 "The location of the files to share. The share will be accessible at "
 "/export/<name>."
-msgstr "Розташування файлів для спільного використання. Ресурс буде доступний за адресою /export/<name>."
+msgstr "Розташування файлів для спільного використання. Ресурс буде доступно за адресою /export/<name>."
 
 msgid "The location of the user home directories."
 msgstr "Розташування домашнього каталога користувача"
