Various improvements and bugfixes.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.48) stable; urgency=low
+
+  * Various improvements and bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Oct 2016 23:35:42 +0200
+
 openmediavault (3.0.47) stable; urgency=low
 
   * Update locales.
