Fix bug. See http://forum.openmediavault.org/index.php/Thread/15529-Problems-with-graph-generator-after-upgrading-to-3-0-47/?s=d25dfd4ce9797994b023b2c84c881c5ca3d0fc31.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.12) stable; urgency=low
+
+  * Various bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 21 Oct 2016 12:11:04 +0200
+
 openmediavault (2.2.11) stable; urgency=low
 
   * Mantis 0001626: NFS-Exports of fuse-filesystem require fsid=<id>.
