--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,12 +1,12 @@
 openmediavault (2.2.12) stable; urgency=low
 
-  * Various bugfixes.
+  * Fix bug in RRD graph script.
+  * Fix NFS daemon configuration.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 21 Oct 2016 12:11:04 +0200
 
 openmediavault (2.2.11) stable; urgency=low
 
-  * Mantis 0001626: NFS-Exports of fuse-filesystem require fsid=<id>.
   * Mantis 0001627: omv_config_get returns wrong output.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Oct 2016 22:26:27 +0200
