--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (3.0.48) stable; urgency=low
   * Various improvements and bugfixes.
   * Fix bug in RRD graph script.
   * Fix NFS daemon configuration.
+  * Fix bug in the omv-firstaid menu 'Configure network interface'.
   * Change notification email subject to '[HOSTNAME] SUBJECT'.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Oct 2016 23:35:42 +0200
