--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (3.0.49) stable; urgency=low
 
   * Various improvements and bugfixes.
+  * Fix issues in NFS /etc/exports when a shared folder is exported to
+    multiple clients.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Oct 2016 21:48:27 +0200
 
