--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.51) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 28 Oct 2016 16:13:14 +0200
+
 openmediavault (3.0.50) stable; urgency=low
 
   * Mantis 0001630: Fix bug in omv_trim function.
