--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.13) stable; urgency=low
+
+  * Fix bug in omv-release-upgrade.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 01 Nov 2016 20:23:37 +0100
+
 openmediavault (2.2.12) stable; urgency=low
 
   * Fix bug in RRD graph script.
