--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.51) stable; urgency=low
 
-  * 
+  * Various improvements and bugfixes.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 28 Oct 2016 16:13:14 +0200
 
