--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (3.1.3) stable; urgency=low
+
+  * Fix bug in RPC datamodel.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 04 Nov 2016 14:23:31 +0100
+
 openmediavault-lvm2 (3.1.2) stable; urgency=low
 
   * Various improvements.
