--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-10-09 21:33+0200\n"
-"PO-Revision-Date: 2016-10-25 13:58+0000\n"
+"PO-Revision-Date: 2016-10-29 04:12+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -2088,7 +2088,7 @@ msgid "Network"
 msgstr "Hálózat"
 
 msgid "Network Interfaces"
-msgstr ""
+msgstr "Hálózati interfészek"
 
 msgid "Network interfaces"
 msgstr "Hálózati interfészek"
