--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,12 @@
 openmediavault (3.0.51) stable; urgency=low
 
+  * Various improvements and bugfixes.
+  * Unlink WebGUI cache files in case of an exception.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 07 Nov 2016 15:04:58 +0100
+
+openmediavault (3.0.51) stable; urgency=low
+
   * Update locales.
   * Various improvements and bugfixes.
 
