--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2.3) stable; urgency=low
+
+  * Mantis 0001641: Modifying shares doesn't update afp.conf file.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 15 Nov 2016 22:07:40 +0100
+
 openmediavault-netatalk (3.2.2) stable; urgency=low
 
   * Harden installation script.
