--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/el_GR/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/el_GR/openmediavault-netatalk.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
-# Kostas Moho <kgounaris@hotmail.com>, 2012-2014
+# Kostas Moho <kgounaris@hotmail.com>, 2012-2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-18 16:29+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,7 +64,7 @@ msgid "Enable user home directories."
 msgstr "Ενεργοποίηση υποκαταλόγων για τους χρήστες."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Ενεργοποιημένο"
 
 msgid "Extra options"
 msgstr "Επιπρόσθετες ρυθμίσεις"
@@ -118,7 +118,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Διαβάστε το <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>εγχειρίδιο</a> για περισσότερες πληροφορίες."
 
 msgid "Quota"
 msgstr "Ποσοστά"
