--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/hu_HU/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/hu_HU/openmediavault-netatalk.po
@@ -5,14 +5,14 @@
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # mersaint <mersaint@gmail.com>, 2012
-# Grawens <szabolcs.szanyi@gmail.com>, 2014
+# Grawens <szabolcs.szanyi@gmail.com>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-29 04:16+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -66,7 +66,7 @@ msgid "Enable user home directories."
 msgstr "Felhasználói saját könyvtárak engedélyezése."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Engedélyezve"
 
 msgid "Extra options"
 msgstr "Extra beállítások"
@@ -120,7 +120,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Kérlek tekintsd meg a <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>kézikönyvet</a>  a további részletekért."
 
 msgid "Quota"
 msgstr "Kvóta"
