--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/nl_NL/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/nl_NL/openmediavault-netatalk.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
-# Milan Toet <milantoet@gmail.com>, 2012-2013
+# Milan Toet <milantoet@gmail.com>, 2012-2013,2016
 # Tim <co_ti@hotmail.com>, 2013-2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-09 20:09+0000\n"
+"Last-Translator: Milan Toet <milantoet@gmail.com>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/votdev/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -65,7 +65,7 @@ msgid "Enable user home directories."
 msgstr "Gebruikersthuismappen inschakelen"
 
 msgid "Enabled"
-msgstr ""
+msgstr "Ingeschakeld"
 
 msgid "Extra options"
 msgstr "Extra opties"
@@ -119,7 +119,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Controleer de <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>hulppagina</a> voor meer details."
 
 msgid "Quota"
 msgstr "Quota"
